Line height adjusted in data download to prevent overlapping

--- a/web/css/dataDownload.css
+++ b/web/css/dataDownload.css
@@ -72,18 +72,21 @@
 
 #wv-data-selection h3 {
     font-size: 12pt;
+    line-height: 12pt;
     font-weight: bold;
     color: #FFFBE7;
 }
 
 #wv-data-selection h4 {
     font-size: 11pt;
+    line-height: 11pt;
     font-weight: bold;
     color: #FFFBE7;
 }
 
 #wv-data-selection h5 {
     font-size: 10pt;
+    line-height: 10pt;
     margin-top: 10px;
     margin-bottom: 5px;
     color: #FFFBE7;
